--- a/src/product/templates/products/list.html
+++ b/src/product/templates/products/list.html
@@ -10,15 +10,15 @@
 
 
 <div class="card">
-    <form action="" method="get" class="card-header">
+    <form action="" method="POST" class="card-header">
+        {% csrf_token %}
         <div class="form-row justify-content-between">
             <div class="col-md-2">
-                <input type="text" name="title" placeholder="Product Title" class="form-control">
+                <input type="text" name="product_title" placeholder="Product Title" class="form-control">
             </div>
             <div class="col-md-2">
                 <select name="variant" id="" class="form-control">
-                    <option selected disabled>--Select A Variant--</option>
-
+                    {% for variant in all_variants %}<option value="{{variant.variant_title}}">{{ variant.variant_title }}</option>{% endfor %}
                 </select>
             </div>
 
@@ -46,67 +46,54 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>#</th>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Variant</th>
-                    <th width="150px">Action</th>
+                    <th><b>#</b></th>
+                    <th><b>Title</b></th>
+                    <th><b>Description</b></th>
+                    <th><b>Variant</b></th>
+                    <th></th>
+                    <th></th>
+                    <th width="150px"><b>Action</b></th>
                 </tr>
                 </thead>
 
                 <tbody>
+                {% for product in products %}
+
                 <tr>
-                    <td>1</td>
-                    <td>T-Shirt <br> Created at : 25-Aug-2020</td>
-                    <td>Quality product in low cost</td>
+                    <td>{{product.product.id}}</td>
+                    <td>{{product.product.title}}</td>
+                    <td>{{product.product.description}}</td>
+
                     <td>
                         <dl class="row mb-0" style="height: 80px; overflow: hidden" id="variant">
-                                <dt class="col-sm-3 pb-0">
-                                    XL/ Black/ Full
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                                <dt class="col-sm-3 pb-0">
-                                    XL/ Black/ Half
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                                <dt class="col-sm-3 pb-0">
-                                    L/ Black/ Full
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                                <dt class="col-sm-3 pb-0">
-                                    L/ Black/ Half
-                                </dt>
-                                <dd class="col-sm-9">
-                                    <dl class="row mb-0">
-                                        <dd class="col-sm-4 pb-0">Price : 200.0</dd>
-                                        <dd class="col-sm-8 pb-0">InStock : 50.</dd>
-                                    </dl>
-                                </dd>
-                            </dl>
+                            <b>{{ product.product_variant_one.variant_title }}</b>
+                            <b>{{ product.product_variant_two.variant_title }}</b>
+                            <b>{{ product.product_variant_three.variant_title }}</b>
+
+                            <dt class="col-sm-3 pb-0">
+
+                            </dt>
+                            <dd class="col-sm-9">
+
+                                <dl class="row mb-0">
+                                    <dt class="col-sm-4 pb-0"></dt>
+                                    <dd class="col-sm-8 pb-0"></dd>
+                                </dl>
+
+                            </dd>
+                        </dl>
                         <button onclick="$('#variant').toggleClass('h-auto')" class="btn btn-sm btn-link">Show more
                         </button>
                     </td>
+                    <td><b>Price : {{ product.price }}</b></td>
+                    <td>InStock : {{ product.stock }}</td>
                     <td>
                         <div class="btn-group btn-group-sm">
                             <a href="" class="btn btn-success">Edit</a>
                         </div>
                     </td>
                 </tr>
+                {% endfor %}
                 </tbody>
 
             </table>
@@ -117,12 +104,41 @@
     <div class="card-footer">
         <div class="row justify-content-between">
             <div class="col-md-6">
-                <p>Showing 1 to 10 out of 100</p>
+                <p>Showing {{ products.start_index }}-{{ products.end_index }} of {{ products.paginator.count }}</p>
             </div>
             <div class="col-md-2">
 
             </div>
         </div>
+
+
+
     </div>
 </div>
+
+{% if products.has_other_pages %}
+  <ul class="pagination justify-content-end">
+
+    {% if products.has_previous %}
+    <li class="page-item"><a class="page-link" href="?page={{ products.previous_page_number }}">&laquo;</a></li>
+    {% else %}
+
+    {% endif %}
+    {% for i in products.paginator.page_range %}
+        {% if users.number == i %}
+    <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
+     {% else %}
+      <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+        {% endif %}
+    {% endfor %}
+    {% if products.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ products.next_page_number }}">Next</a>
+    </li>
+    {% else %}
+    <li class="page-item disabled"><a class="page-link" href="#"></a></li>
+    {% endif %}
+  </ul>
+{% endif %}
+
 {% endblock %}
